--- a/Quiz1/index.html
+++ b/Quiz1/index.html
@@ -29,10 +29,10 @@
                 <!-- Primary Navbar items -->
                 <div class="hidden md:flex items-center space-x-1">
                     <a href="index.html" class="py-4 px-2 text-blue-500 border-b-4 border-blue-500 font-semibold">Home</a>
-                    <a href="profile.html" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Profile</a>
-                    <a href="hometown.html" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Hometown</a>
-                    <a href="food.html" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Local Food</a>
-                    <a href="tourist.html" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Tourist Places</a>
+                    <a href="Profile/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Profile</a>
+                    <a href="Hometown/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Hometown</a>
+                    <a href="Food/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Local Food</a>
+                    <a href="Tourist/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Tourist Places</a>
                 </div>
                 <!-- Mobile menu button -->
                 <div class="md:hidden flex items-center">
@@ -56,10 +56,10 @@
         <div class="hidden mobile-menu">
             <ul class="">
                 <li class="active"><a href="index.html" class="block text-sm px-2 py-4 text-white bg-blue-500 font-semibold">Home</a></li>
-                <li><a href="profile.html" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Profile</a></li>
-                <li><a href="hometown.html" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Hometown</a></li>
-                <li><a href="food.html" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Local Food</a></li>
-                <li><a href="tourist.html" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Tourist Places</a></li>
+                <li><a href="Profile/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Profile</a></li>
+                <li><a href="Hometown/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Hometown</a></li>
+                <li><a href="Food/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Local Food</a></li>
+                <li><a href="Tourist/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Tourist Places</a></li>
             </ul>
         </div>
     </nav>
@@ -82,3 +82,4 @@
     </script>
 </body>
 </html>
+
