--- a/quiz1/profile/index.html
+++ b/quiz1/profile/index.html
@@ -21,18 +21,18 @@
                 <div class="flex space-x-7">
                     <div>
                         <!-- Website Logo -->
-                        <a href="/" class="flex items-center py-4 px-2">
+                        <a href="/quiz1/" class="flex items-center py-4 px-2">
                             <span class="font-semibold text-gray-500 text-lg">My Website</span>
                         </a>
                     </div>
                 </div>
                 <!-- Primary Navbar items -->
                 <div class="hidden md:flex items-center space-x-1">
-                    <a href="/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Home</a>
-                    <a href="/profile/" class="py-4 px-2 text-blue-500 border-b-4 border-blue-500 font-semibold">Profile</a>
-                    <a href="/hometown/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Hometown</a>
-                    <a href="/food/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Local Food</a>
-                    <a href="/tourist/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Tourist Places</a>
+                    <a href="/quiz1/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Home</a>
+                    <a href="/quiz1/profile/" class="py-4 px-2 text-blue-500 border-b-4 border-blue-500 font-semibold">Profile</a>
+                    <a href="/quiz1/hometown/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Hometown</a>
+                    <a href="/quiz1/food/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Local Food</a>
+                    <a href="/quiz1/tourist/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Tourist Places</a>
                 </div>
                 <!-- Mobile menu button -->
                 <div class="md:hidden flex items-center">
@@ -55,11 +55,11 @@
         <!-- mobile menu -->
         <div class="hidden mobile-menu">
             <ul class="">
-                <li><a href="/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Home</a></li>
-                <li class="active"><a href="/profile/" class="block text-sm px-2 py-4 text-white bg-blue-500 font-semibold">Profile</a></li>
-                <li><a href="/hometown/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Hometown</a></li>
-                <li><a href="/food/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Local Food</a></li>
-                <li><a href="/tourist/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Tourist Places</a></li>
+                <li><a href="/quiz1/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Home</a></li>
+                <li class="active"><a href="/quiz1/profile/" class="block text-sm px-2 py-4 text-white bg-blue-500 font-semibold">Profile</a></li>
+                <li><a href="/quiz1/hometown/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Hometown</a></li>
+                <li><a href="/quiz1/food/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Local Food</a></li>
+                <li><a href="/quiz1/tourist/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Tourist Places</a></li>
             </ul>
         </div>
     </nav>
@@ -85,3 +85,4 @@
     </script>
 </body>
 </html>
+
