--- a/quiz1/food/index.html
+++ b/quiz1/food/index.html
@@ -10,88 +10,138 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+
+        /* --- SCROLL ANIMATION CSS --- */
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .animate-on-scroll {
+            opacity: 0;
+            transition: opacity 0.5s ease-out;
+        }
+        .animate-on-scroll.is-visible {
+            animation: fadeInUp 0.8s ease-out forwards;
+        }
+
+        /* --- PAGE TRANSITION CSS --- */
+        @keyframes fadeInPage {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeOutPage {
+            from { opacity: 1; }
+            to { opacity: 0; }
+        }
+        body.fade-in {
+            animation: fadeInPage 0.5s ease-in-out forwards;
+        }
+        body.fade-out {
+            animation: fadeOutPage 0.5s ease-in-out forwards;
+        }
     </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen fade-in">
 
-    <!-- Navigation -->
-    <nav class="bg-white shadow-md">
+    <!-- Sticky Navigation -->
+    <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-4">
-            <div class="flex justify-between">
-                <div class="flex space-x-7">
-                    <div>
-                        <!-- Website Logo -->
-                        <a href="/quiz1/" class="flex items-center py-4 px-2">
-                            <span class="font-semibold text-gray-500 text-lg">My Website</span>
-                        </a>
+             <div class="flex justify-between items-center">
+                <!-- Left Side: Logo + Links -->
+                <div class="flex items-center space-x-2">
+                    <!-- Logo -->
+                    <a href="/quiz1/" class="flex items-center py-4 px-2">
+                        <span class="font-semibold text-gray-500 text-lg">Melvan's</span>
+                    </a>
+                    <!-- Links -->
+                    <div class="hidden md:flex items-center space-x-4">
+                        <a href="/quiz1/" class="py-4 px-2 text-gray-500 font-semibold hover:text-[#a6c0fe] transition duration-300">Home</a>
+                        <a href="/quiz1/profile/" class="py-4 px-2 text-gray-500 font-semibold hover:text-[#a6c0fe] transition duration-300">Profile</a>
+                        <a href="/quiz1/hometown/" class="py-4 px-2 text-gray-500 font-semibold hover:text-[#f68084] transition duration-300">Hometown</a>
+                        <a href="/quiz1/food/" class="py-4 px-2 text-[#96e6a1] border-b-4 border-[#96e6a1] font-semibold">Local Food</a>
+                        <a href="/quiz1/tourist/" class="py-4 px-2 text-gray-500 font-semibold hover:text-[#fbc7d4] transition duration-300">Tourist Places</a>
                     </div>
-                </div>
-                <!-- Primary Navbar items -->
-                <div class="hidden md:flex items-center space-x-1">
-                    <a href="/quiz1/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Home</a>
-                    <a href="/quiz1/profile/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Profile</a>
-                    <a href="/quiz1/hometown/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Hometown</a>
-                    <a href="/quiz1/food/" class="py-4 px-2 text-blue-500 border-b-4 border-blue-500 font-semibold">Local Food</a>
-                    <a href="/quiz1/tourist/" class="py-4 px-2 text-gray-500 font-semibold hover:text-blue-500 transition duration-300">Tourist Places</a>
                 </div>
                 <!-- Mobile menu button -->
                 <div class="md:hidden flex items-center">
                     <button class="outline-none mobile-menu-button">
-                    <svg class=" w-6 h-6 text-gray-500 hover:text-blue-500 "
-                        x-show="!showMenu"
-                        fill="none"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor"
-                    >
+                    <svg class=" w-6 h-6 text-gray-500 hover:text-blue-500 " fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                         <path d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg>
                     </button>
                 </div>
             </div>
         </div>
-        <!-- mobile menu -->
         <div class="hidden mobile-menu">
             <ul class="">
-                <li><a href="/quiz1/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Home</a></li>
-                <li><a href="/quiz1/profile/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Profile</a></li>
-                <li><a href="/quiz1/hometown/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Hometown</a></li>
-                <li class="active"><a href="/quiz1/food/" class="block text-sm px-2 py-4 text-white bg-blue-500 font-semibold">Local Food</a></li>
-                <li><a href="/quiz1/tourist/" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Tourist Places</a></li>
+                <li><a href="/quiz1/" class="block text-sm px-2 py-4 hover:bg-[#a6c0fe] transition duration-300">Home</a></li>
+                <li><a href="/quiz1/profile/" class="block text-sm px-2 py-4 hover:bg-[#a6c0fe] transition duration-300">Profile</a></li>
+                <li><a href="/quiz1/hometown/" class="block text-sm px-2 py-4 hover:bg-[#f68084] transition duration-300">Hometown</a></li>
+                <li class="active"><a href="/quiz1/food/" class="block text-sm px-2 py-4 text-white bg-[#96e6a1] font-semibold">Local Food</a></li>
+                <li><a href="/quiz1/tourist/" class="block text-sm px-2 py-4 hover:bg-[#fbc7d4] transition duration-300">Tourist Places</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- Content -->
-    <div class="max-w-6xl mx-auto px-4 py-8">
-        <div class="bg-white p-8 rounded-lg shadow-lg">
-            <h1 class="text-4xl font-bold mb-4">Famous Local Food</h1>
-            <p class="text-lg text-gray-600 mb-6">Discover the delicious local cuisine from my hometown.</p>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="max-w-6xl mx-auto px-4 py-8 flex-grow">
+        <div class="bg-white p-8 rounded-lg shadow-lg h-full relative overflow-hidden">
+            <!-- Decorative Backgrounds -->
+            <div class="absolute top-0 left-0 w-80 h-80 bg-gradient-to-br from-[#96e6a1] to-transparent opacity-10 -translate-y-1/2 -translate-x-1/2 transform rotate-12 rounded-full pointer-events-none"></div>
+            <div class="absolute bottom-0 right-0 w-96 h-96 bg-gradient-to-tl from-[#96e6a1] to-transparent opacity-10 translate-y-1/2 translate-x-1/2 transform rotate-45 rounded-full pointer-events-none"></div>
+            <div class="absolute top-1/2 left-1/2 w-64 h-64 bg-gradient-to-tr from-[#96e6a1] to-transparent opacity-5 -translate-y-1/2 -translate-x-1/2 transform rotate-20 rounded-full pointer-events-none"></div>
+
+            <div class="relative z-10">
+                <div class="text-center mb-12 animate-on-scroll">
+                    <h1 class="text-4xl font-bold">Famous Local Food</h1>
+                    <p class="text-lg text-gray-600">Discover the delicious local cuisine from Malang</p>
+                </div>
+
                 <!-- Food Item 1 -->
-                <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden">
-                    <img src="https://placehold.co/400x300/E2E8F0/333333?text=Food+1" alt="Food 1" class="w-full h-48 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-xl font-semibold mb-2">Local Dish One</h3>
-                        <p class="text-gray-600">A short description of this delicious local dish. This is placeholder text.</p>
+                <div class="grid md:grid-cols-2 gap-12 items-center mb-16 animate-on-scroll" style="animation-delay: 0.2s;">
+                    <div class="rounded-lg overflow-hidden shadow-lg">
+                        <img src="https://osccdn.medcom.id/images/content/2022/09/05/88ba6ea133560997235e865fdfc174da.jpg" alt="Local Dish One" class="w-full h-full object-cover">
+                    </div>
+                    <div class="flex items-center">
+                        <div class="relative w-full">
+                            <div class="absolute inset-0 bg-[#96e6a1] opacity-20 rounded-lg transform -rotate-1"></div>
+                            <div class="relative bg-white/70 backdrop-blur-sm p-8 rounded-lg shadow-md">
+                                <h3 class="text-3xl font-semibold mb-4 text-gray-800">Bakso (Meatballs)</h3>
+                                <p class="text-gray-600 leading-relaxed">Malang meatballs are special because of their generous portions with various fillings, such as smooth meatballs, tendon meatballs, wontons, siomay, tofu, and vermicelli. Another characteristic is the broth, which is richer and more savory since it is cooked with bones and offal, and it is served with a variety of crispy fried items like fried meatballs and fried wontons to add texture and flavor.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                 <!-- Food Item 2 -->
-                 <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden">
-                    <img src="https://placehold.co/400x300/E2E8F0/333333?text=Food+2" alt="Food 2" class="w-full h-48 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-xl font-semibold mb-2">Local Dish Two</h3>
-                        <p class="text-gray-600">A short description of this delicious local dish. This is placeholder text.</p>
+
+                <!-- Food Item 2 -->
+                <div class="grid md:grid-cols-2 gap-12 items-center mb-16 animate-on-scroll" style="animation-delay: 0.2s;">
+                    <div class="md:order-2 rounded-lg overflow-hidden shadow-lg">
+                         <img src="https://asset.kompas.com/crops/W9FOUYORLTvRDtaXFiNRkFuE980=/129x0:858x486/1200x800/data/photo/2021/05/15/609fbcd2ed6d9.jpg" alt="Local Dish Two" class="w-full h-full object-cover">
+                    </div>
+                    <div class="md:order-1 flex items-center">
+                        <div class="relative w-full">
+                            <div class="absolute inset-0 bg-[#96e6a1] opacity-20 rounded-lg transform rotate-1"></div>
+                            <div class="relative bg-white/70 backdrop-blur-sm p-8 rounded-lg shadow-md">
+                                <h3 class="text-3xl font-semibold mb-4 text-gray-800">Rujak Cingur</h3>
+                                <p class="text-gray-600 leading-relaxed">Famous Indonesian dish from East Java, consisting of a mix of tropical fruits and vegetables, such as young mango, pineapple, and water spinach, along with other ingredients like fried tofu, tempeh, and the unique ingredient "cingur," which is boiled beef snout</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                 <!-- Food Item 3 -->
-                 <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden">
-                    <img src="https://placehold.co/400x300/E2E8F0/333333?text=Food+3" alt="Food 3" class="w-full h-48 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-xl font-semibold mb-2">Local Dish Three</h3>
-                        <p class="text-gray-600">A short description of this delicious local dish. This is placeholder text.</p>
+                
+                <!-- Food Item 3 -->
+                <div class="grid md:grid-cols-2 gap-12 items-center mb-16 animate-on-scroll" style="animation-delay: 0.2s;">
+                    <div class="rounded-lg overflow-hidden shadow-lg">
+                        <img src="https://cdn1-production-images-kly.akamaized.net/PuFmfXD_7xz7zW91X7MT-qhT4es=/800x450/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/1507000/original/034282000_1487063519-malang-heritage-putu-lanang-celaket1--1024x683.jpg" alt="Local Dish Three" class="w-full h-full object-cover">
+                    </div>
+                    <div class="flex items-center">
+                        <div class="relative w-full">
+                             <div class="absolute inset-0 bg-[#96e6a1] opacity-20 rounded-lg transform -rotate-1"></div>
+                             <div class="relative bg-white/70 backdrop-blur-sm p-8 rounded-lg shadow-md">
+                                <h3 class="text-3xl font-semibold mb-4 text-gray-800">Putu Lanang</h3>
+                                <p class="text-gray-600 leading-relaxed">Putu is a traditional Indonesian and Southeast Asian sweet treat made from steamed rice flour, often flavored with pandan leaves and colored green. It is typically cylindrical in shape, formed by pressing the flour mixture into a bamboo tube, filled with a core of melted palm sugar, and then steamed until cooked.</p>
+                             </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -99,11 +149,45 @@
     </div>
     
     <script>
+        // --- MOBILE MENU SCRIPT ---
         const btn = document.querySelector("button.mobile-menu-button");
         const menu = document.querySelector(".mobile-menu");
-
         btn.addEventListener("click", () => {
             menu.classList.toggle("hidden");
+        });
+
+        // --- SCROLL ANIMATION SCRIPT ---
+        const animatedElements = document.querySelectorAll(".animate-on-scroll");
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add("is-visible");
+                    observer.unobserve(entry.target);
+                }
+            });
+        }, {
+            threshold: 0.1
+        });
+        animatedElements.forEach((element) => {
+            observer.observe(element);
+        });
+
+        // --- PAGE TRANSITION SCRIPT ---
+        document.addEventListener('DOMContentLoaded', () => {
+            const links = document.querySelectorAll('a');
+            links.forEach(link => {
+                link.addEventListener('click', e => {
+                    const href = link.getAttribute('href');
+                    const target = link.getAttribute('target');
+                    if (href && href.startsWith('/quiz1/') && target !== '_blank') {
+                        e.preventDefault();
+                        document.body.classList.add('fade-out');
+                        setTimeout(() => {
+                            window.location.href = href;
+                        }, 500);
+                    }
+                });
+            });
         });
     </script>
 </body>
