--- a/quiz1/hometown/index.html
+++ b/quiz1/hometown/index.html
@@ -187,7 +187,7 @@
             showSlide(currentSlide);
         });
 
-        // Initialize slider
+        // slider
         showSlide(currentSlide);
 
         // --- PAGE TRANSITION SCRIPT ---
